--- a/index.html
+++ b/index.html
@@ -1,58 +1,72 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular Application</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Angular Application</title>
 
-    <style>
-        body {
-            font-family: "Helvetica Neue", Verdana, sans-serif;
-        }
+  <style>
+  body {
+    font-family: "Helvetica Neue", Verdana, sans-serif;
+  }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            margin: 50px 0;
-        }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 50px 0;
+  }
 
-        input {
-            font-size: 16px;
-            padding: 5px 7px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 3px;
-        }
-        thead {
-            background: rgba(0, 0, 0, 0.05);
-            border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-            color: rgba(0, 0, 0, 0.8);
-        }
+  input {
+    font-size: 16px;
+    padding: 5px 7px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+  }
+  thead {
+    background: rgba(0, 0, 0, 0.05);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.8);
+  }
 
-        tr:not(:last-of-type) {
-            border-bottom: 1px solid map-get($border-color, light);
-        }
+  tr:not(:last-of-type) {
+    border-bottom: 1px solid map-get($border-color, light);
+  }
 
-        td {
-            padding: 16px 12px 14px;
-        }
-    </style>
+  td {
+    padding: 16px 12px 14px;
+  }
+  </style>
 </head>
 <body>
 
-    <div ng-app="app" class="app">
-        <div ng-controller="FormController as ctrl">
-            <form>
-
-            </form>
+  <div ng-app="app" class="app">
+    <div ng-controller="FormController as ctrl">
+      <form name="form">
+        <label>Name: </label><input ng-model="ctrl.username" name="username" type="text" required="required" minlength="3" maxlength="20" />
+        <div>
+        <span ng-if="form.username.$touched && (form.username.$error.required || form.username.$error.minlength || form.username.$error.minlength) ">
+          <br>Username is required! Username must have a minimum length of 3 characters and a maximum length of 20 characters!</span>
         </div>
+        <br><label>Password: </label><input ng-model="ctrl.password" name="password"  type="password" required="required" minlength="8" />
+        <div>
+        <span ng-if="form.password.$touched && (form.password.$error.required || form.password.$error.minlength)">
+          <br>Password is required! Password must have a minimum length of 8 characters!</span>
+        </div>
+        <br><label>Email: </label><input ng-model="ctrl.email" name="email" type="email" required="required" />
+        <div>
+        <span ng-if="form.email.$touched && (form.email.$invalid || form.email.$error.required)">
+         <br>E-mail address is required! You have not entered a valid e-mail addresss.</span>
+        </div>
+      </form>
     </div>
+  </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/FormController.js"></script>
+  <script src="js/angular.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/FormController.js"></script>
 
 </body>
 </html>
