--- a/index.html
+++ b/index.html
@@ -44,9 +44,58 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
 
-            </form>
+            <!--USERNAME -->
+           <input type="text"
+                  name="username"
+                  required
+                  minlength="3"
+                  maxlength="20"
+                  ng-model="ctrl.username">
+             <div ng-if="form.username.$touched">
+               <div ng-if="form.username.$error.required">
+                 Username is required!
+              </div>
+               <div ng-if="form.username.$error.minlength">
+                   You can think of a name longer than 3 characters!
+               </div>
+               <div ng-if="form.username.$error.maxlength">
+                   Easy there, lightning fingers. The maximum username length is 20 characters.
+               </div>
+            </div>
+             <br>
+
+             <!--PASSWORD -->
+
+           <input type="password"
+                  name="password"
+                  minlength="8"
+                  ng-model="ctrl.password"
+                  required >
+              <div ng-if="form.password.$touched" >
+                 <div ng-if="form.password.$error.minlength">
+                     Your password should be at least 8 characters
+                 </div>
+                 <div ng-if="form.password.$error.required">
+                     password is required
+                 </div>
+               </div>
+                 <br>
+
+
+            <input type="email"
+                    name="email"
+                    required
+                    ng-model="ctrl.email" >
+            <div ng-if="form.email.$touched">
+              <div ng-if="form.email.$invalid">
+                  Sorry, but a valid email address is required.
+              </div>
+            </div>
+                 <br><button type="submit" class="btn btn-primary">Submit</button>
+
+            </form> -->
         </div>
     </div>
 
