--- a/index.html
+++ b/index.html
@@ -42,17 +42,75 @@
 </head>
 <body>
 
-    <div ng-app="app" class="app">
-        <div ng-controller="FormController as ctrl">
-            <form>
+  <div ng-app="app" class="app">
+      <div ng-controller="FormController as ctrl">
+          <form name="form">
+            <div>
+                Username:
+                <input
+                  type="text"
+                  ng-model="ctrl.username"
+                  name="username"
+                  required="required"
+                  minlength="3"
+                  maxlength="20"
+                />
+                <div ng-if="form.username.$touched">
+                  <div ng-if="form.username.$error.required">
+                    Username is required!
+                  </div>
+                  <div ng-if="form.username.$error.minlength">
+                    Username must be more than 3 characters!
+                  </div>
+                  <div ng-if="form.username.$error.maxlength">
+                    Username must be less than 20 characters!
+                  </div>
+                </div>
+            </div>
 
-            </form>
-        </div>
-    </div>
+            <div>
+              Password
+              <input
+                type="password"
+                ng-model="ctrl.password"
+                name="password"
+                required="required"
+                minlength="8"
+              />
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                  Password is required!
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                  Password must be more than 8 characters!
+                </div>
+              </div>
+            </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/FormController.js"></script>
+            <div>
+              Email
+              <input
+                type="email"
+                ng-model="ctrl.email"
+                name="email"
+                required="required"
+              />
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                  Email is required!
+                </div>
+                <div ng-if="form.email.$error.email">
+                  Email must be valid!
+                </div>
+              </div>
+            </div>
+          </form>
+      </div>
+  </div>
+
+  <script src="js/angular.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/FormController.js"></script>
 
 </body>
 </html>
