--- a/index.html
+++ b/index.html
@@ -44,8 +44,54 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <label>Username:</label>
+              <input
+                type="text"
+                name="username"
+                required="required"
+                minlength="3"
+                maxlength="20"
+                ng-model="ctrl.username"  />
+              <div ng-if="form.username.$touched">
+                <div ng-if="form.username.$error.required">
+                      Username is required!
+                </div>
+                <div ng-if="form.username.$error.minlength || form.username.$error.maxlength">
+                      Username must be between 3 and 20 characters!
+                </div>
+              </div>
 
+              <label>Password:</label>
+              <input
+                type="text"
+                name="password"
+                required="required"
+                minlength="8"
+                ng-model="ctrl.password"  />
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                      Password is required!
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                      Password must be more than 8 characters!
+                </div>
+              </div>
+
+              <label>Email:</label>
+              <input
+                type="email"
+                name="email"
+                required="required"
+                ng-model="ctrl.email"  />
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                      Email is required!
+                </div>
+                <div ng-if="form.email.$error.email">
+                      A valid email is required!
+                </div>
+              </div>
             </form>
         </div>
     </div>
