--- a/index.html
+++ b/index.html
@@ -44,8 +44,56 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
-
+            <form name="form">
+              <label>Username:</label>
+              <input name="username"
+                     ng-model="ctrl.username"
+                     required="required"
+                     minlength="3"
+                     maxlength="20">
+              <div role="alert">
+                <div ng-if="form.username.$touched">
+                  <div ng-if="form.username.$error.required">
+                    Username is required!
+                  </div>
+                  <div ng-if="form.username.$error.minlength">
+                    Too short, must be atleast 3 characters!
+                  </div>
+                  <div ng-if="form.username.$error.maxlength">
+                    Too long!
+                  </div>
+                </div>
+              </div>
+              <label>Password:</label>
+              <input name="password"
+                     ng-model="ctrl.password"
+                     required="required"
+                     minlength="8">
+              <div role="alert">
+                <div ng-if="form.password.$touched">
+                  <div ng-if="form.password.$error.required">
+                    Password is required!
+                  </div>
+                  <div ng-if="form.password.$error.minlength">
+                    Too short, must be atleast 8 characters long!
+                  </div>
+                </div>
+              </div>
+              <label>Email:</label>
+              <input name="email"
+                     type="email"
+                     ng-model="ctrl.email"
+                     required="required">
+              <div role="alert">
+                <div ng-if="form.email.$touched">
+                  <div ng-if="form.email.$error.required">
+                    Email is required!
+                  </div>
+                  <div ng-if="form.email.$error.email">
+                    Must be a valid email!
+                  </div>
+                </div>
+              </div>
             </form>
         </div>
     </div>
