--- a/index.html
+++ b/index.html
@@ -1,58 +1,82 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular Application</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Angular Application</title>
 
-    <style>
-        body {
-            font-family: "Helvetica Neue", Verdana, sans-serif;
-        }
+  <style>
+  body {
+    font-family: "Helvetica Neue", Verdana, sans-serif;
+  }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            margin: 50px 0;
-        }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 50px 0;
+  }
 
-        input {
-            font-size: 16px;
-            padding: 5px 7px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 3px;
-        }
-        thead {
-            background: rgba(0, 0, 0, 0.05);
-            border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-            color: rgba(0, 0, 0, 0.8);
-        }
+  input {
+    font-size: 16px;
+    padding: 5px 7px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+  }
+  thead {
+    background: rgba(0, 0, 0, 0.05);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.8);
+  }
 
-        tr:not(:last-of-type) {
-            border-bottom: 1px solid map-get($border-color, light);
-        }
+  tr:not(:last-of-type) {
+    border-bottom: 1px solid map-get($border-color, light);
+  }
 
-        td {
-            padding: 16px 12px 14px;
-        }
-    </style>
+  td {
+    padding: 16px 12px 14px;
+  }
+  </style>
 </head>
 <body>
 
-    <div ng-app="app" class="app">
-        <div ng-controller="FormController as ctrl">
-            <form>
-
-            </form>
+  <div ng-app="app" class="app">
+    <div ng-controller="FormController as ctrl">
+      <form name="form">
+        <div class="username">
+          <input type="text" name="username" placeholder="Username" required="required" ng-model="ctrl.username" minlength="3" maxlength="20" />
+          <div ng-if="form.username.$touched">
+            <div ng-if="form.username.$error.required">Username is required!</div>
+            <div ng-if="form.username.$error.minlength">Username must be a more than 3 characters</div>
+            <div ng-if="form.username.$error.maxlength">Username must be less than 20 characters</div>
+          </div>
         </div>
+
+        <div class="password">
+          <input placeholder="Password" name="password" required="required" ng-model="ctrl.password" ng-minlength="8" />
+          <div ng-if="form.password.$touched">
+            <div ng-if="form.password.$error.required">Password required</div>
+            <div ng-if="form.password.$error.minlength">Minimum length is 8 inches</div>
+          </div>
+        </div>
+
+        <div class="email">
+          <input placeholder="Email" name="email" required="required" type="email" ng-model="ctrl.email" />
+          <div ng-if="form.email.$touched">
+            <div ng-if="form.email.$error.required">Email is required</div>
+            <div ng-if="form.email.$error.email">Must be valid email address</div>
+          </div>
+        </div>
+      </form>
+
     </div>
+  </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/FormController.js"></script>
-
+  <script src="js/angular.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/FormController.js"></script>
+  <script src="js/app/directives/usernameValidation.js"></script>
 </body>
 </html>
