--- a/index.html
+++ b/index.html
@@ -44,7 +44,33 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <div class="name">
+                Username:
+                <input
+                  name="username"
+                  ng-model="ctrl.username"
+                  required="required"
+                  ng-maxlength="20"
+                  ng-minlength="3"/>
+              </div>
+              <div class="password">
+                Password:
+                <input
+                  name="password"
+                  ng-model="ctrl.password"
+                  required="required"
+                  ng-minlength="8"/>
+              </div>
+              <div class="email">
+                Email:
+                <input
+                  name="email"
+                  ng-model="ctrl.email"
+                  required="required"
+                  type="email"/>
+              </div>
+
 
             </form>
         </div>
