--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                   name="username"
                   ng-model="ctrl.username"
                   required="required"
-                  ng-maxlength="20"
                   ng-minlength="3"/>
+                  <div ng-messages="form.username.$error" style="color:maroon" role="alert">
+                    <div ng-message="required">Your name is required.</div>
+                    <div ng-message="minlength">Your name should be at least 3 letters long</div>
+                  </div>
               </div>
               <div class="password">
                 Password:
@@ -61,6 +64,10 @@
                   ng-model="ctrl.password"
                   required="required"
                   ng-minlength="8"/>
+                  <div ng-messages="form.password.$error" style="color:maroon" role="alert">
+                    <div ng-message="required">Your password is required.</div>
+                    <div ng-message="minlength">Your password should be at least 8 letters long</div>
+                  </div>
               </div>
               <div class="email">
                 Email:
@@ -69,9 +76,11 @@
                   ng-model="ctrl.email"
                   required="required"
                   type="email"/>
+                  <div ng-messages="form.email.$error" style="color:maroon" role="alert">
+                    <div ng-message="required">Your email is required.</div>
+                    <div ng-message="email">Not valid email address!</div>
+                  </div>
               </div>
-
-
             </form>
         </div>
     </div>
@@ -79,6 +88,8 @@
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/FormController.js"></script>
+    <script src="//code.angularjs.org/snapshot/angular.min.js"></script>
+    <script src="//code.angularjs.org/snapshot/angular-messages.js"></script>
 
 </body>
 </html>
