--- a/index.html
+++ b/index.html
@@ -44,7 +44,43 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <input
+                type="text"
+                name="username"
+                required="required"
+                minlength="3"
+                maxlength="20"
+                ng-model="ctrl.username"
+              />
+              <div ng-if="form.username.$touched">
+                <span ng-if="form.username.$error.required">Username is required</span>
+                <span ng-if="form.username.$error.minlength">Username must be at least 3 characters</span>
+                <span ng-if="form.username.$error.maxlength">Username must less than 20 characters</span>
+              </div>
+
+              <input
+                type="text"
+                name="password"
+                required="required"
+                minlength="8"
+                ng-model="ctrl.password"
+              />
+              <div ng-if="form.password.$touched">
+                <span ng-if="form.password.$error.required">Password is required</span>
+                <span ng-if="form.password.$error.minlength">Password must be at least 8 characters</span>
+              </div>
+
+              <input
+                type="email"
+                name="email"
+                required="required"
+                ng-model="ctrl.email"
+              />
+              <div ng-if="form.email.$touched">
+                <span ng-if="form.email.$error.required">Email is required</span>
+                <span ng-if="form.email.$error.email">Email must be valid</span>
+              </div>
 
             </form>
         </div>
