--- a/index.html
+++ b/index.html
@@ -44,8 +44,52 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <label>Username:</label>
+              <input name="username"
+                     ng-model="ctrl.username"
+                     required="required"
+                     minlength="3"
+                     maxlength="20">
+              <div ng-if="form.username.$touched">
+                <div ng-if="form.username.$error.required">
+                  Username is required!
+                </div>
+                <div ng-if="form.username.$error.minlength">
+                  Username must be at least 3 characters!
+                </div>
+                <div ng-if="form.username.$error.maxlength">
+                  Username must be less than 20 characters!
+                </div>
+              </div>
 
+              <label>Password:</label>
+              <input name="password"
+                     ng-model="ctrl.password"
+                     required="required"
+                     minlength="8">
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                  Password is required!
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                  Password must be at least 8 characters!
+                </div>
+              </div>
+
+              <label>Email:</label>
+              <input type="email"
+                     name="email"
+                     ng-model="ctrl.email"
+                     required="required">
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                  Email is required!
+                </div>
+                <div ng-if="form.email.$error.email">
+                  Must be a valid email!
+                </div>
+              </div>
             </form>
         </div>
     </div>
