--- a/index.html
+++ b/index.html
@@ -42,9 +42,52 @@
 </head>
 <body>
 
-    <div ng-app="app" class="app">
-        <div ng-controller="FormController as ctrl">
-            <form>
+  <div ng-app="app" class="app">
+      <div ng-controller="FormController as ctrl">
+          <form name="form">
+
+              <input
+                  name="username"
+                  required="required"
+                  minlength="3"
+                  maxlength="20"
+                  ng-model="ctrl.username" />
+              <div>
+                  <div ng-if="form.username.$touched && form.username.$error.required">
+                      Username is required!
+                  </div>
+                  <div ng-if="form.username.$touched && (form.username.$error.minlength || form.username.$error.maxlength)">
+                      Username must be between 3-20 characters!
+                  </div>
+              </div>
+
+              <input
+                  name="password"
+                  required="required"
+                  minlength="8"
+                  ng-model="ctrl.password" />
+              <div>
+                  <div ng-if="form.password.$touched && form.password.$error.required">
+                      Password is required!
+                  </div>
+                  <div ng-if="form.password.$touched && form.password.$error.minlength">
+                      Password must be at least 8 characters!
+                  </div>
+              </div>
+
+              <input
+                  name="email"
+                  type="email"
+                  required="required"
+                  ng-model="ctrl.email" />
+              <div>
+                  <div ng-if="form.email.$touched && form.email.$error.required">
+                      Email is required!
+                  </div>
+                  <div ng-if="form.email.$touched && form.email.$error.email">
+                      Must be a valid email!
+                  </div>
+              </div>
 
             </form>
         </div>
