--- a/index.html
+++ b/index.html
@@ -44,8 +44,64 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
-
+            <form name="form">
+                <div>
+                    <label>Username</label>
+                    <input 
+                        type="text" 
+                        name="username" 
+                        required="required"
+                        ng-model="ctrl.username"
+                        minlength="3"
+                        maxlength="20" 
+                    />
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.username.$error.required">
+                            Username is required!
+                        </div>
+                        <div ng-if="form.username.$error.minlength">
+                            Username has to be at least 3 character!
+                        </div>
+                        <div ng-if="form.username.$error.maxlength">
+                            Username has to be less than 20 character!
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input 
+                        type="password" 
+                        name="password" 
+                        required="required" 
+                        ng-model="ctrl.password"
+                        minlength="8" 
+                    />
+                    <div ng-if="form.password.$touched">
+                        <div ng-if="form.password.$error.required">
+                            Password is required!
+                        </div>
+                        <div ng-if="form.password.$error.minlength">
+                            Password has to be at least 8 characters!
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <label>Email</label>
+                    <input 
+                        type="email" 
+                        name="email" 
+                        required="required" 
+                        ng-model="ctrl.email"
+                    />
+                    <div ng-if="form.email.$touched">
+                        <div ng-if="form.email.$error.required">
+                            Email is required
+                        </div>
+                        <div ng-if="form.email.$invalid">
+                            Has to be a valid email address
+                        </div>                        
+                    </div>
+                </div>
             </form>
         </div>
     </div>
